@@ -1,3 +1,9 @@
+2008-06-28  Guillem Jover  <guillem@debian.org>
+
+	* lib/parsedump.h (parseerr, parsemustfield): Remove unused 'file'
+	argument. Fix all callers.
+	* lib/parsehelp.c (parseerr): Remove checks on 'file'.
+
 2008-06-28  Tollef Fog Heen  <tfheen@err.no>
 
 	* src/archives.c (tarobject): Refactor tarfile object skipping to ...
